@startuml
'https://plantuml.com/class-diagram

package 推广领域{

class PromoterLevel<<分销员等级>> {
+level : int 分销员等级
+name : string 分销员等级名称
+description : string 描述
+icon : string 图标
+image:  string 图片
+product_ratio:  Int 商品比例
+parent_ratio:  Int 商品比例
+conditions:List  升级资格条件
+keeps:List 保级资格条件
+apply_method: enum 申请方式
+audit_method: enum 审核方式
+benefits:List 权益
}
PromoterLevel ...> PromoterConditionInterface: 条件
interface PromoterConditionInterface <<分销员条件接口>>{
+ static  allowTypes():array 支持的申请类型
+ static  name():string
+ static  label():string   名称
+ static  tips():?string 提示
+ static  unit():?string 单位

+ static getPromoterValue(Promoter $promoter):value 获取分销员调整值
}

enum PromoterApplyMethod <<分销员申请方式>>{
disable 关闭申请
manual 手动申请
auto 自动申请

}

enum PromoterAuditMethod <<分销员审核方式>>{
manual 手动
auto 自动

}
PromoterLevel --> PromoterApplyMethod
PromoterLevel --> PromoterAuditMethod
class PromoterTeam<<推广团队>>{
+name : string 推广团队名称
+description : string 描述
+type:enum 团队类型
+icon : string 图标
+image:  string 图片
+leader: Promoter 团队负责人
+ parent:  PromoterTeam 父级管理团队
+ 状态
+ totalWithdrawal : double 总提现
+ totalOrderCommission : double 累计佣金
+ totalOrder : int 总订单
+ totalOrderAmount : double 累计销售额
+ totalCustomers : double 累计客户数
+ totalInvitations : double 累计邀请数
}

class PromoterGroup<<分组>>{
+name : string 分组名称
+ description : string 描述
}

class Promoter<<分销员>> {
+ owner : User 所属人
+ level : PromoterLevel 分销员等级
+ team: List<Promoter> 所属团队
+ group: PromoterGroup 分组
+ ?Inviter : Promoter 邀请人
+ upgradeAt: Date 升级时间
+ status : string 状态
+ totalWithdrawal : double 总提现
+ totalOrderCommission : double 累计佣金
+ totalOrder : int 总订单
+ totalOrderAmount : double 累计销售额
+ totalCustomers : double 累计客户数
+ totalInvitations : double 累计邀请数
}


class PromoterApply <<分销员申请单>>{
+PromoterId: Int 分销员ID
+level : PromoterLevel 分销员等级
+apply_type: enum 类型 招募、升级、降级
+apply_method: enum 申请方式
+apply_time: Date 申请时间
+audit_method: enum 审核方式
+audit_time: Date 审核时间
+audit_status: enum 审核结果状态
+audit_reason: string 审核原因
+?auditor : User 审核人

+ approve()  批准
+ reject() 拒绝
}

enum PromoterApplyType <<分销员申请类型>>{
register 注册
upgrade 升级
Downgrade 降级
}
PromoterApply ---> PromoterApplyType
PromoterApply -> Promoter
PromoterApply -> PromoterLevel

class 推广关系{
- 分销员
- 用户
- 关系状态 绑定中/生效/已失效
- 有效期 决定关系状态 超过即为关系失效
- 保护期
}

class  推广订单记录{
- 用户
- 分销员
- 分销员所属团队
- 分销员所属分组
- 推广订单
- 推广关系
- 推广订单金额
- 推广订单状态
- 推广订单创建时间
- 推广订单更新时间
- 推广订单完成时间
- 结算方式
- 结算状态
}




object 绑客模式{
+关系有效期  N天、永久
+关系保护期  M天、永久  M < N
+关系生成条件; 点击推广链接、需要 N 时内下单
}



Promoter *-- PromoterTeam:入团|退团

Promoter *-- PromoterGroup:包含

Promoter ..> PromoterLevel:升级|降级

Promoter . 推广关系:推广邀请用户
Promoter . 推广订单记录:推广


}
用户 . 推广订单记录:下单
推广关系 . 用户:注册/下单

推广订单记录 .. 电子钱包:结算
package 用户{

}

package 电子钱包{

object 佣金账户{
}
}





@enduml